src/objects/Project_Details__c.object
<CustomObject>
    <description>This is the parent object of employee</description>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Project Details</relationshipLabel>
        <relationshipName>Project_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Ending Date of project</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <description>Picklist for Implementation type</description>
        <label>Implementation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the field referring to parent(Employee)</description>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.Role_of_employee__r.Name</field>
                <operation>equals</operation>
                <value>Project manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Project Details</relationshipLabel>
        <relationshipName>Project_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>Unique code of project</description>
        <displayFormat>PRJ-{0000}</displayFormat>
        <label>Project Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <description>description of project</description>
        <label>Project Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date of project</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of project</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>OPEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN PROGRESS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Details  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>